--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Mission stuff
+
+kingshorses_3dbase.chernarus_summer/mission.sqf
+KingsHorses.Chernarus_Summer/mission.sqm
+KingsHorses.Chernarus_Summer/loads/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
