--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 kingshorses_3dbase.chernarus_summer/mission.sqf
 KingsHorses.Chernarus_Summer/mission.sqm
 KingsHorses.Chernarus_Summer/loads/*
+sh_ammo_crates/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
