--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ kingshorses_3dbase.chernarus_summer/mission.sqf
 KingsHorses.Chernarus_Summer/mission.sqm
 KingsHorses.Chernarus_Summer/loads/*
 sh_ammo_crates/*
+slots.txt
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
