--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 kingshorses_3dbase.chernarus_summer/mission.sqf
 KingsHorses.Chernarus_Summer/mission.sqm
 KingsHorses.Chernarus_Summer/loads/*
-sh_ammo_crates/*
+sh_ammo_crates/config.cpp
 slots.txt
 
 # Byte-compiled / optimized / DLL files
